Added stacked digistore cards and a clear crafting grid button to the craftin terminal. Prevented players from accidentally throwing their wireless terminal into the network.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -413,6 +413,12 @@
 	"item.staticpower.digistore_card_singular_energized": "Energized Digistore Mono Card",
 	"item.staticpower.digistore_card_singular_lumum": "Lumum Digistore Mono Card",
 	"item.staticpower.digistore_card_singular_creative": "Creative Digistore Mono Card",
+	"item.staticpower.digistore_card_stacked_basic": "Basic Digistore Stacked Card",
+	"item.staticpower.digistore_card_stacked_advanced": "Advanced Digistore Stacked Card",
+	"item.staticpower.digistore_card_stacked_static": "Static Digistore Stacked Card",
+	"item.staticpower.digistore_card_stacked_energized": "Energized Digistore Stacked Card",
+	"item.staticpower.digistore_card_stacked_lumum": "Lumum Digistore Stacked Card",
+	"item.staticpower.digistore_card_stacked_creative": "Creative Digistore Stacked Card",
 	"item.staticpower.digistore_pattern_card": "Pattern Card",
 	"item.staticpower.digistore_wireless_terminal": "Wireless Terminal",
 	"item.staticpower.cover": "Cover",
