Redstone network looking good!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -844,6 +844,8 @@
 	"gui.staticpower.digistore_wireless_terminal_bound": "Wireless Terminal bound!",
 	"gui.staticpower.digistore_wireless_terminal_not_bound": "Wireless Terminal must be first bound to a crafting terminal!",
 	"gui.staticpower.digistore_wireless_terminal_out_of_range": "Wireless Terminal's crafting terminal out of range!",
+	"gui.staticpower.redstone_cable_input_mode": "This cable will read a redstone signal.",
+	"gui.staticpower.redstone_cable_output_mode": "This cable will provide a redstone signal",
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox"
 }
