--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -840,6 +840,7 @@
 	"gui.staticpower.digistore_wireless_terminal_bound": "Wireless Terminal bound!",
 	"gui.staticpower.digistore_wireless_terminal_not_bound": "Wireless Terminal must be first bound to a crafting terminal!",
 	"gui.staticpower.digistore_wireless_terminal_out_of_range": "Wireless Terminal's crafting terminal out of range!",
+	"gui.staticpower.digistore_attachment_power_usage": "Network Power Usage: %1$s",
 	"gui.staticpower.redstone_cable_input_mode": "This cable will read a redstone signal.",
 	"gui.staticpower.redstone_cable_output_mode": "This cable will provide a redstone signal",
 	"gui.staticpower.redstone_cable_input_output_mode": "This cable will both provide and read a redstone signal (not recommended!)",
