--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -524,6 +524,7 @@
 	"block.staticpower.machine_vulcanizer": "Vulcanizer",
 	"block.staticpower.machine_turbine": "Turbine",
 	"block.staticpower.machine_packager": "Packager",
+	"block.staticpower.power_monitor": "Power Monitor",
 	"block.staticpower.direct_dropper": "Bull's Eye Dropper",
 	"block.staticpower.automatic_placer": "Automatic Placer",
 	"block.staticpower.experience_hopper": "Experience Hopper",
@@ -727,6 +728,9 @@
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
 	"gui.staticpower.max_input": "Max Input",
+	"gui.staticpower.max_output": "Max Output",
+	"gui.staticpower.capacity": "Capacity",
+	"gui.staticpower.stored_power": "Stored Power",
 	"gui.staticpower.usage": "Usage",
 	"gui.staticpower.millbuckets": "mB",
 	"gui.staticpower.energy_unit": "V",
