Added in all 16 colors for concrete

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -366,7 +366,22 @@
 	"item.staticpower.bucket_fertilizer": "Fertilizer Bucket",
 	"item.staticpower.bucket_oil_seed": "Seed Oil Bucket",
 	"item.staticpower.bucket_honey": "Honey Bucket",
-	"item.staticpower.bucket_concrete": "Concrete",
+	"item.staticpower.bucket_concrete_blue": "Blue Concrete Bucket",
+	"item.staticpower.bucket_concrete_black": "Black Concrete Bucket",
+	"item.staticpower.bucket_concrete_red": "Red Concrete Bucket",
+	"item.staticpower.bucket_concrete_green": "Green Concrete Bucket",
+	"item.staticpower.bucket_concrete_brown": "Brown Concrete Bucket",
+	"item.staticpower.bucket_concrete_purple": "Purple Concrete Bucket",
+	"item.staticpower.bucket_concrete_cyan": "Cyan Concrete Bucket",
+	"item.staticpower.bucket_concrete_light_gray": "Light Gray Concrete Bucket",
+	"item.staticpower.bucket_concrete_gray": "Concrete Bucket",
+	"item.staticpower.bucket_concrete_pink": "Pink Concrete Bucket",
+	"item.staticpower.bucket_concrete_lime": "Lime Concrete Bucket",
+	"item.staticpower.bucket_concrete_yellow": "Yellow Concrete Bucket",
+	"item.staticpower.bucket_concrete_light_blue": "Light Blue Concrete Bucket",
+	"item.staticpower.bucket_concrete_magenta": "Magenta Concrete Bucket",
+	"item.staticpower.bucket_concrete_orange": "Orange Concrete Bucket",
+	"item.staticpower.bucket_concrete_white": "White Concrete Bucket",
 	"item.staticpower.bucket_molten_iron": "Molten Iron",
 	"item.staticpower.bucket_molten_gold": "Molten Gold",
 	"item.staticpower.bucket_molten_copper": "Molten Copper",
@@ -743,7 +758,22 @@
 	"fluid.staticpower.fertilizer": "Fertilizer",
 	"fluid.staticpower.oil_seed": "Seed Oil",
 	"fluid.staticpower.honey": "Honey",
-	"fluid.staticpower.concrete": "Concrete",
+	"fluid.staticpower.concrete_blue": "Blue Concrete",
+	"fluid.staticpower.concrete_black": "Black Concrete",
+	"fluid.staticpower.concrete_red": "Red Concrete",
+	"fluid.staticpower.concrete_green": "Green Concrete",
+	"fluid.staticpower.concrete_brown": "Brown Concrete",
+	"fluid.staticpower.concrete_purple": "Purple Concrete",
+	"fluid.staticpower.concrete_cyan": "Cyan Concrete",
+	"fluid.staticpower.concrete_light_gray": "Light Gray Concrete",
+	"fluid.staticpower.concrete_gray": "Concrete",
+	"fluid.staticpower.concrete_pink": "Pink Concrete",
+	"fluid.staticpower.concrete_lime": "Lime Concrete",
+	"fluid.staticpower.concrete_yellow": "Yellow Concrete",
+	"fluid.staticpower.concrete_light_blue": "Light Blue Concrete",
+	"fluid.staticpower.concrete_magenta": "Magenta Concrete",
+	"fluid.staticpower.concrete_orange": "Orange Concrete",
+	"fluid.staticpower.concrete_white": "White Concrete",
 	"fluid.staticpower.latex": "Latex",
 	"fluid.staticpower.molten_iron": "Molten Iron",
 	"fluid.staticpower.molten_gold": "Molten Gold",
