--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -528,6 +528,13 @@
 	"item.staticpower.bed_frame": "Bed Frame",
 	"item.staticpower.egg_smeep": "S'Meep Spawn Egg",
 	"item.staticpower.egg_enox": "Enox Spawn Egg",
+	"item.staticpower.research_tier_1": "Research Vol. 1",
+	"item.staticpower.research_tier_2": "Research Vol. 2",
+	"item.staticpower.research_tier_3": "Research Vol. 3",
+	"item.staticpower.research_tier_4": "Research Vol. 4",
+	"item.staticpower.research_tier_5": "Research Vol. 5",
+	"item.staticpower.research_tier_6": "Research Vol. 6",
+	"item.staticpower.research_tier_7": "Research Vol. 7",
 	"block.staticpower.grass_static": "Static Grass",
 	"block.staticpower.grass_energized": "Energized Grass",
 	"block.staticpower.grass_lumum": "Lumum Static",
@@ -574,6 +581,7 @@
 	"block.staticpower.machine_packager": "Packager",
 	"block.staticpower.machine_enchanter": "Esoteric Enchanter",
 	"block.staticpower.machine_refinery": "Refinery",
+	"block.staticpower.laboratory": "Research Laboratory",
 	"block.staticpower.power_monitor": "Power Monitor",
 	"block.staticpower.direct_dropper": "Bull's Eye Dropper",
 	"block.staticpower.automatic_placer": "Automatic Placer",
