Pushing to transfer to laptop -- fixing many matrix issues

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -998,5 +998,9 @@
 	"key.staticpower.lock_slot": "Lock/Unlock Slot",
 	"key.staticpower.toggle_magnet": "Toggle Magnet",
 	"key.staticpower.open_portable_digistore": "Open Portable Digistore",
-	"staticpower.research.your_first_research": "Your First Research"
+	"key.staticpower.open_research": "Open Research Window",
+	"staticpower.research.your_first_research": "Your First Research",
+	"staticpower.research.your_second_research": "Your Second Research",
+	"staticpower.research.your_second_second_research": "Your 2nd Second Research",
+	"staticpower.research.your_third_research": "Your Third Research"
 }
