Added in new flavors of chest and added back the inventory label to most machines.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -766,6 +766,11 @@
 	"block.staticpower.conveyor_hopper_filtered": "Filtered Conveyor Hopper",
 	"block.staticpower.conveyor_ramp_down": "Conveyor Slope Down",
 	"block.staticpower.conveyor_ramp_up": "Conveyor Slope Up",
+	"block.staticpower.chest_basic": "Basic Chest",
+	"block.staticpower.chest_advanced": "Advanced Chest",
+	"block.staticpower.chest_static": "Static Chest",
+	"block.staticpower.chest_energized": "Energized Chest",
+	"block.staticpower.chest_lumum": "Lumum Chest",
 	"fluid.staticpower.tree_sap": "Tree Sap",
 	"fluid.staticpower.infernal_tree_sap": "Infernal Tree Sap",
 	"fluid.staticpower.ethanol": "Ethanol",
