Fixed issue with fluids being too transparent. Started work on oil gen

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -736,6 +736,7 @@
 	"block.staticpower.rubber_tree_leaves": "Rubber Tree Leaves",
 	"block.staticpower.rubber_tree_sapling": "Rubber Tree Sapling",
 	"block.staticpower.rubber_tree_planks": "Rubber Tree Planks",
+	"block.staticpower.pump_tube": "Pump Tube",
 	"block.staticpower.pump_iron": "Iron Pump",
 	"block.staticpower.pump_basic": "Pump",
 	"block.staticpower.pump_advanced": "Advanced Pump",
