Building the research tree is harder than it sounds...

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -748,8 +748,8 @@
 	"block.staticpower.lamp_static": "Static Lamp",
 	"block.staticpower.lamp_energized": "Energized Lamp",
 	"block.staticpower.lamp_lumum": "Lumum Lamp",
-	"block.staticpower.machine_block_iron": "Iron Machine Block",
-	"block.staticpower.machine_block_basic": "Basic Machine Block",
+	"block.staticpower.machine_block_aluminum": "Light Machine Block",
+	"block.staticpower.machine_block_basic": "Machine Block",
 	"block.staticpower.machine_block_advanced": "Advanced Machine Block",
 	"block.staticpower.machine_block_static": "Static Machine Block",
 	"block.staticpower.machine_block_energized": "Energized Machine Block",
