Research changes, speed differences between drill and chainsaw tiers, fixed all JEI progress bar rendering

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -951,7 +951,7 @@
 	"gui.staticpower.import_slots": "Import Slots",
 	"gui.staticpower.export_slots": "Export Slots",
 	"gui.staticpower.pump_rate_format": "Pumps every %1$s seconds",
-	"gui.staticpower.cable_transfer_rate": "%1$d %2$s/s",
+	"gui.staticpower.item_cable_transfer_rate": "%1$d %2$s/s",
 	"gui.staticpower.max_transfer_rate": "Maximum Transfer Rate",
 	"gui.staticpower.power_cable_max_rate": "Maximum Power Rate",
 	"gui.staticpower.max_fluid_rate": "Maximum Fluid Rate",
@@ -1024,6 +1024,7 @@
 	"gui.staticpower.machine_set_team": "Sets the team this machine belongs to.",
 	"gui.staticpower.tab_title.research": "Research",
 	"gui.staticpower.remaining_heat_time": "Remaining Heat Time:",
+	"gui.staticpower.tool_speed_multiplier": "Mining Speed",
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox",
 	"key.categories.staticpower": "Static Power",
