Working refinery system! Now to add gameplay systems around it.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -599,7 +599,10 @@
 	"block.staticpower.machine_turbine": "Turbine",
 	"block.staticpower.machine_packager": "Packager",
 	"block.staticpower.machine_enchanter": "Esoteric Enchanter",
-	"block.staticpower.machine_refinery": "Refinery",
+	"block.staticpower.machine_refinery_controller": "Refinery Controller",
+	"block.staticpower.machine_refinery_power_tap": "Refinery Power Tap",
+	"block.staticpower.machine_refinery_fluid_input": "Refinery Fluid Input",
+	"block.staticpower.machine_refinery_fluid_output": "Refinery Fluid Output",
 	"block.staticpower.laboratory": "Research Laboratory",
 	"block.staticpower.power_monitor": "Power Monitor",
 	"block.staticpower.direct_dropper": "Bull's Eye Dropper",
