--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -771,6 +771,7 @@
 	"block.staticpower.lamp_energized": "Energized Lamp",
 	"block.staticpower.lamp_lumum": "Lumum Lamp",
 	"block.staticpower.machine_block_aluminum": "Light Machine Block",
+	"block.staticpower.machine_block_industrial": "Industrial Machine Block",
 	"block.staticpower.machine_block_basic": "Machine Block",
 	"block.staticpower.machine_block_advanced": "Advanced Machine Block",
 	"block.staticpower.machine_block_static": "Static Machine Block",
