Refinery looking good!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -603,6 +603,8 @@
 	"block.staticpower.machine_refinery_power_tap": "Refinery Power Tap",
 	"block.staticpower.machine_refinery_fluid_input": "Refinery Fluid Input",
 	"block.staticpower.machine_refinery_fluid_output": "Refinery Fluid Output",
+	"block.staticpower.machine_refinery_item_input": "Refinery Item Input",
+	"block.staticpower.machine_refinery_heat_vent": "Refinery Heat Vent",
 	"block.staticpower.laboratory": "Research Laboratory",
 	"block.staticpower.power_monitor": "Power Monitor",
 	"block.staticpower.direct_dropper": "Bull's Eye Dropper",
@@ -918,10 +920,10 @@
 	"gui.staticpower.fluid_unit": "B",
 	"gui.staticpower.fluid_unit_per_tick": "B/t",
 	"gui.staticpower.heat_unit": "°H",
-	"gui.staticpower.heat_unit_per_tick": "°H/t",
+	"gui.staticpower.heat_unit_per_tick": "°C/t",
 	"gui.staticpower.heat_transfer": "Heat Transfer",
 	"gui.staticpower.heat": "Heat",
-	"gui.staticpower.heat_conductivity_unit": "C",
+	"gui.staticpower.heat_conductivity_unit": "λ",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
 	"gui.staticpower.side.front": "Front",
