New power system looking good!

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -921,21 +921,34 @@
 	"attribute.staticpower.promoted": "Promoted",
 	"gui.staticpower.empty": "Empty",
 	"gui.staticpower.input": "Input",
+	"gui.staticpower.min_input": "Max Input",
 	"gui.staticpower.max_input": "Max Input",
 	"gui.staticpower.max_output": "Max Output",
+	"gui.staticpower.input_range": "Input Range",
 	"gui.staticpower.capacity": "Capacity",
 	"gui.staticpower.stored_power": "Stored Power",
 	"gui.staticpower.usage": "Usage",
+	
+	"gui.staticpower.volt_unit": "V",
+	
+	"gui.staticpower.current_unit": "C",
+	"gui.staticpower.stored_power": "Stored Power",
+	"gui.staticpower.power_unit": "P",
+	"gui.staticpower.power_unit_per_tick": "P/t",
+	
+	"gui.staticpower.power_resistance_unit": "Ω",
+	
 	"gui.staticpower.millbuckets": "mB",
-	"gui.staticpower.energy_unit": "V",
-	"gui.staticpower.energy_unit_per_tick": "V/t",
 	"gui.staticpower.fluid_unit": "B",
 	"gui.staticpower.fluid_unit_per_tick": "B/t",
-	"gui.staticpower.heat_unit": "°C",
-	"gui.staticpower.heat_unit_per_tick": "°C/t",
+	
+	"gui.staticpower.heat_unit": "°H",
+	"gui.staticpower.heat_unit_per_tick": "°H/t",
+	
+	"gui.staticpower.heat_conductivity_unit": "λ",
+	
 	"gui.staticpower.heat_transfer": "Heat Transfer",
 	"gui.staticpower.heat": "Heat",
-	"gui.staticpower.heat_conductivity_unit": "λ",
 	"gui.staticpower.side.top": "Top",
 	"gui.staticpower.side.bottom": "Bottom",
 	"gui.staticpower.side.front": "Front",
@@ -999,7 +1012,8 @@
 	"gui.staticpower.pump_rate_format": "Pumps every %1$s seconds",
 	"gui.staticpower.item_cable_transfer_rate": "%1$d %2$s/s",
 	"gui.staticpower.max_transfer_rate": "Maximum Transfer Rate",
-	"gui.staticpower.power_cable_max_rate": "Maximum Power Rate",
+	"gui.staticpower.power_cable_max_current": "Maximum Current",
+	"gui.staticpower.power_cable_resistance": "Resistance",
 	"gui.staticpower.max_fluid_rate": "Maximum Fluid Rate",
 	"gui.staticpower.item_cable_acceleration": "Acceleration: %1$d%%",
 	"gui.staticpower.item_cable_friction": "Friction: -%1$d%%",
