--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -1257,14 +1257,15 @@
 	"gui.staticpower.crafting_interface_tooltip": "Give it recipes, watch it go! Attach to any machines and the machines become part of the digistore network.",
 	"gui.staticpower.digistore_wireless_terminal_advanced_tooltip": "Bound to terminal: %1$s",
 	
+	"gui.staticpower.machine_set_team": "Sets the team this machine belongs to.",
+	
 	"gui.staticpower.experience": "%s XP",
 	"gui.staticpower.fertlization": "Fertilization",
 	"gui.staticpower.fertlization_bonus": "Fertilization Bonus: %s",
 	"gui.staticpower.research_menu_key_tooltip": "Press %1$s to view more",
 	"gui.staticpower.research_menu_no_selected_research_key_tooltip": "Press %1$s to select new research!",
 	"gui.staticpower.set_team": "Set Team",
-	"gui.staticpower.machine_set_team": "Sets the team this machine belongs to.",
-	"gui.staticpower.tab_title.research": "Research",
+	"gui.staticpower.tab_title.team": "Team",
 	"gui.staticpower.remaining_heat_time": "Remaining Heat Time:",
 	"gui.staticpower.tool_speed_multiplier": "Mining Speed",
 	"gui.staticpower.transformer_upgrade_tooltip": "Upgrades a Machine from %1$s to %2$s",
